--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,7 +11,7 @@
     <body>
         <main>
             <div class="login-container">
-                <img src="/images/logo.png">
+                <img src="/images/Screenshot (7).png">
 
                 <div class="form-container">
                     <h2>Welcome Back</h2>
