--- a/src/views/studentExeat.ejs
+++ b/src/views/studentExeat.ejs
@@ -24,9 +24,6 @@
                                 Weekly Pass
                             </button>
                          
-                            <button class="exbtn" data-trigger="longterm">
-                                Long-Term Pass
-                            </button>
                         </div>
                         <div class="exInfoWeekEnd none " id="weekend">
                               <div class="dater ">
@@ -50,76 +47,69 @@
                                    </div>
 
                                    <div class="fileInfo-2">
-                                    <label for="signedFile"><b>signed Letter:</b></label>
+                                    <label for="signedFile"><b>Parent Letter:</b></label>
                                     <input type="file" name="signedFile" class="sf">
     
                                    </div>
                                 </div>
+                                <div class="description">
+                                       <h1>Guidelines for Weekend Exeat Request</h1><br>
+                                        <span>
+                                            1. You can only request once a month <br><hr>
+                                            2. It is advised to request between Mon-Wed<br><hr>
+                                            3. You are to return to school on or before your endDate.<br><hr>
+                                            4. You are to contact your hall admin if you need to prolong your leave.<br><hr>
+                                            5. Do not leave the school until your status says <span style="color: green;" >Approved </span>
+                                        </span>
+                                </div>
 
                         </div>
                         <div class="exInfoWeekDay none" id="weekday">
-                            <div class="dater">
-
+                    <div class="dater"> 
                                <div class="dater-1">
-                                <label for="startDate">Start Date</label><br>
-                                <input type="date" name="startDate" class="startDate" id="startDate">
-                               </div>
+                                    <label for="startDate">Start Date</label><br>
+                                    <input type="date" name="startDate" class="startDate" id="startDate">
+                                </div>
 
                          <div class="dater-2">
                             <label for="endDate"> End Date </label><br>
                             <input type="date" name="endDate"class="endDate" id="endDate"> 
                          </div>   
                                                           <!-- <label for="days"><span>Days</span><h1>3</h1></label> -->
-                            </div><br>
+                    </div><br>
 
-                            <div class="fileInfo">
-
-                                <div class="fileInfo-1">
-                                     <label for="leavePurpose">REASON FOR PASS(optional)</label> 
-                                     <textarea  name="comment" placeholder="describe the reason for leave" class="comment" id="comment" cols="20" rows="5"></textarea>    
+                                <div class="fileInfo">
+                                    <div class="fileInfo-1">
+                                        <label for="leavePurpose">REASON FOR PASS(optional)</label> 
+                                        <textarea  name="comment" placeholder="describe the reason for leave" class="comment" id="comment" cols="20" rows="5"></textarea>    
+                                    </div>
+                                    <div class="fileInfo-2">
+                                         <label for="signedFile"><b>Parent Letter:</b></label>
+                                        <input type="file" name="signedFile" class="sf">
+                                    </div>               
                                 </div>
-                                <div class="fileInfo-2">
-                                     <label for="signedFile"><b>signed Letter</b></label>
-                                     <input type="file" name="signedFile" class="sf">
-                                </div>               
-                             </div>
-
-                        </div>
-                        <div class="exInfoLongTerm none" id="longterm">
-
-                           <div class="dater">
-
-                               <div class="dater-1">
-                                <label for="startDate">Start Date</label><br>
-                                <input type="date" name="startDate" class="startDate" id="startDate">
-                               </div>
-
-                         <div class="dater-2">
-                            <label for="endDate"> End Date </label><br>
-                            <input type="date" name="endDate"class="endDate" id="endDate"> 
-                         </div>   
-                                                          <!-- <label for="days"><span>Days</span><h1>3</h1></label> -->
-                            </div><br>
-
-                            <div class="fileInfo">
-
-                                <div class="fileInfo-1">
-                                     <label for="leavePurpose">REASON FOR PASS(optional)</label> 
-                                     <textarea  name="comment" placeholder="describe the reason for leave" class="comment" id="comment" cols="20" rows="5"></textarea>    
+                                <div class="description">
+                                       <h1>Guidelines for Weekly Exeat Request</h1><br>
+                                        <span>
+                                            1. You can only request once a month <br><hr>
+                                            2. It is advised to request between Mon-Wed<br><hr>
+                                            3. You are to return to school on or before your endDate.<br><hr>
+                                            4. You are to contact your hall admin if you need to prolong your leave.<br><hr>
+                                            5. Do not leave the school until your status says <span style="color: green;" >Approved </span>
+                                        </span>
                                 </div>
-                                <div class="fileInfo-2">
-                                     <label for="signedFile"><b>signed Letter</b></label>
-                                     <input type="file" name="signedFile" class="sf">
-                                </div>               
-                             </div>
 
+                             </div>               
+
+                              <section class="exSec2">
+                        <button  type="submit">Send request</button>
+                            </section>
                         
                         </div>
+                        
                     </section>
 
-                    <section class="exSec2">
-                        <button  type="submit">Send request</button>
-                    </section>
+                
 
                 </div>
             </form>
