--- a/src/views/Layout/sideBar.ejs
+++ b/src/views/Layout/sideBar.ejs
@@ -12,22 +12,22 @@
 
     <body>
         <!-- sidebar -->
-        <div class="sidebar ">
-            <a href="#" class="logo">
-                <i class='fas fa-school'></i>
-                <div class="logo-name"><span>UHMS</span></div>
-            </a>
+        <div class="sidebar">
+            <div class="logo">
+                SRES
+            </div>
+            <hr color="#0f0f0f">
 
             <ul class="side-menu">
-                <li><a href="/index"> <i
+                <li><a class="nav-link " href="/index"> <i
                             class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-                <li><a href="/student"><i
+                <li><a class="nav-link" href="/student"><i
                             class='fas fa-address-card'></i>Registration</a></li>
-                <li><a href="/exeat"><i
+                <li><a class="nav-link" href="/exeat"><i
                             class='fas fa-clipboard-list'></i>Exeat</a></li>
-                <li><a href="/status"><i
+                <li><a class="nav-link" href="/status"><i
                             class='fas fa-credit-card'></i>Status</a></li>
-                <li><a href="#"><i
+                <li><a class="nav-link" href="#"><i
                             class='fas fa-circle-info'></i>Support</a></li>
 
             </ul>
@@ -55,12 +55,34 @@
                     <span class="count">12</span>
                 </a>
                 <a href="#" class="profile">
-                    <img src="/images/go.png" alt>
+                    <img src="/images/avatar-8.png" alt>
                 </a>
             </nav>
         </div>
         <!-- end of navbar -->
-        <script src="script.js"></script>
+        <script>
+                const navLinks = document.querySelectorAll('.nav-link');
+
+        function handleNavLinkClick() {
+            // Prevent default link behavior
+            
+
+            // Remove active class from all nav links and their parent li elements
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                link.parentElement.classList.remove('active');
+            });
+
+            // Add active class to the clicked nav link and its parent li element
+            this.classList.add('active');
+            this.parentElement.classList.add('active');
+        }
+
+        // Attach click event listener to each nav link
+        navLinks.forEach(link => {
+            link.addEventListener('click', handleNavLinkClick);
+        });
+        </script>
     </body>
 
 </html>
